--- a/iosApp/Podfile
+++ b/iosApp/Podfile
@@ -7,5 +7,5 @@ source 'https://cdn.cocoapods.org'
 project 'iosApp.xcodeproj'
 
 target 'iosApp' do
-  pod 'skip_line', :path => '../', :inhibit_warnings => true
+  pod 'shared', :path => '../shared', :inhibit_warnings => true
 end
